--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,8 +8,8 @@ on:
 
 env:
   DOCKER_BUILDKIT: 1
-  TEST_TAG: ${{ vars.DOCKERHUB_USERNAME }}/simple-docker-test:test
-  LATEST_TAG: ${{ vars.DOCKERHUB_USERNAME }}/simple-docker:latest
+  TEST_TAG: ${{ secrets.DOCKERHUB_USERNAME }}/simple-docker-test:test
+  LATEST_TAG: ${{ secrets.DOCKERHUB_USERNAME}}/simple-docker:latest
 
 # https://docs.docker.com/build/ci/github-actions/test-before-push/
 jobs:
@@ -25,7 +25,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
+          username: ${{ secrets.DOCKERHUB_USERNAME}}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       
       - name: Build and export to Docker
