--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,7 +36,7 @@ jobs:
       
       - name: Test
         run: |
-          docker run --rm ${{ env.TEST_TAG }}          
+          docker run --rm ${{ env.TEST_TAG }} /bin/true      
       
       - name: Build and push
         uses: docker/build-push-action@v6
