--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,16 +8,26 @@ on:
 
 env:
   DOCKER_BUILDKIT: 1
-  TEST_TAG: ${{ secrets.DOCKERHUB_USERNAME }}/simple-docker-test:test
-  LATEST_TAG: ${{ secrets.DOCKERHUB_USERNAME}}/simple-docker:latest
   
 # https://docs.docker.com/build/ci/github-actions/test-before-push/
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repository
+      - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          # list of Docker images to use as base name for tags
+          images: |
+            simple-docker   
+          # generate Docker tags based on the following events/attributes
+          tags: |
+            type=sha
+            type=ref,event=branch,ref=main
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -31,25 +41,20 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME}}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       
-      - name: Get short SHA
-        id: vars
-        run: echo "GIT_SHA_SHORT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
-      
       - name: Build and export to Docker
         uses: docker/build-push-action@v6
         with:
           load: true
-          tags: ${{ env.TEST_TAG }}
+          tags: ${{ steps.meta.outputs.tags }}
       
       - name: Test
         run: |
-          docker run --rm ${{ env.TEST_TAG }} /bin/true      
+          docker run --rm ${{ steps.meta.outputs.tags }} /bin/true      
       
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          # platforms: linux/amd64,linux/arm64
-          push: ${{ github.event_name != 'pull_request' }}
+          push: true
           tags: |
-            ${{ env.LATEST_TAG }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/simple-docker:${{ env.GIT_SHA_SHORT }}
+            ${{ steps.meta.outputs.tags }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/simple-docker:latest
