--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,60 +1,60 @@
-name: "Deploy Docker"
+# name: "Deploy Docker"
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
+# on:
+#   push:
+#     branches:
+#       - main
+#   pull_request:
 
-env:
-  DOCKER_BUILDKIT: 1
+# env:
+#   DOCKER_BUILDKIT: 1
   
-# https://docs.docker.com/build/ci/github-actions/test-before-push/
-jobs:
-  docker:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+# # https://docs.docker.com/build/ci/github-actions/test-before-push/
+# jobs:
+#   docker:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v3
 
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          # list of Docker images to use as base name for tags
-          images: |
-            simple-docker   
-          # generate Docker tags based on the following events/attributes
-          tags: |
-            type=sha
-            type=ref,event=branch,ref=main
+#       - name: Docker meta
+#         id: meta
+#         uses: docker/metadata-action@v5
+#         with:
+#           # list of Docker images to use as base name for tags
+#           images: |
+#             simple-docker   
+#           # generate Docker tags based on the following events/attributes
+#           tags: |
+#             type=sha
+#             type=ref,event=branch,ref=main
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+#       - name: Set up QEMU
+#         uses: docker/setup-qemu-action@v3
       
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+#       - name: Set up Docker Buildx
+#         uses: docker/setup-buildx-action@v3
       
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME}}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+#       - name: Login to Docker Hub
+#         uses: docker/login-action@v3
+#         with:
+#           username: ${{ secrets.DOCKERHUB_USERNAME}}
+#           password: ${{ secrets.DOCKERHUB_TOKEN }}
       
-      - name: Build and export to Docker
-        uses: docker/build-push-action@v6
-        with:
-          load: true
-          tags: ${{ steps.meta.outputs.tags }}
+#       - name: Build and export to Docker
+#         uses: docker/build-push-action@v6
+#         with:
+#           load: true
+#           tags: ${{ steps.meta.outputs.tags }}
       
-      - name: Test
-        run: |
-          docker run --rm ${{ steps.meta.outputs.tags }} /bin/true      
+#       - name: Test
+#         run: |
+#           docker run --rm ${{ steps.meta.outputs.tags }} /bin/true      
       
-      - name: Build and push
-        uses: docker/build-push-action@v6
-        with:
-          push: true
-          tags: |
-            ${{ steps.meta.outputs.tags }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/simple-docker:latest
+#       - name: Build and push
+#         uses: docker/build-push-action@v6
+#         with:
+#           push: true
+#           tags: |
+#             ${{ steps.meta.outputs.tags }}
+#             ${{ secrets.DOCKERHUB_USERNAME }}/simple-docker:latest
