--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,6 +21,17 @@ jobs:
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Docker meta
+        uses: docker/metadata-action@v5
+        with:
+          # list of Docker images to use as base name for tags
+          images: |
+            simple-docker   
+          # generate Docker tags based on the following events/attributes
+          tags: |
+            type=sha
+            type=ref,event=branch,ref=main
       
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -43,4 +54,6 @@ jobs:
         with:
           # platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ env.LATEST_TAG }}
+          tags: |
+            ${{ steps.meta.outputs.tags }}
+            ${{ env.LATEST_TAG }}
