--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,6 +33,10 @@ jobs:
             type=sha
             type=ref,event=branch,ref=main
       
+      - name: Extract SHA tag
+        id: extract_sha
+        run: echo "TAG=$(echo ${{ steps.meta.outputs.tags }} | grep -o 'simple-docker:sha-[^,]*')" >> $GITHUB_ENV
+      
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -43,11 +47,11 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           load: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ env.DOCKER_METADATA_OUTPUT_TAGS }}
       
       - name: Test
         run: |
-          docker run --rm  ${{ steps.meta.outputs.tags }} /bin/true      
+          docker run --rm  ${{ env.DOCKER_METADATA_OUTPUT_TAGS }} /bin/true      
       
       - name: Build and push
         uses: docker/build-push-action@v6
@@ -56,5 +60,5 @@ jobs:
           # platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ${{ steps.meta.outputs.tags }}
+            ${{ secrets.DOCKERHUB_USERNAME}}/simple-docker:${{ ${{ env.TAG }} }}
             ${{ env.LATEST_TAG }}
