--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -60,5 +60,5 @@ jobs:
           # platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME}}/simple-docker:${{ ${{ env.TAG }} }}
+            ${{ secrets.DOCKERHUB_USERNAME}}/simple-docker:${{ env.TAG }}
             ${{ env.LATEST_TAG }}
