--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,21 +21,6 @@ jobs:
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
-      - name: Docker meta
-        uses: docker/metadata-action@v5
-        with:
-          # list of Docker images to use as base name for tags
-          images: |
-            simple-docker   
-          # generate Docker tags based on the following events/attributes
-          tags: |
-            type=sha
-            type=ref,event=branch,ref=main
-      
-      - name: Extract SHA tag
-        id: extract_sha
-        run: echo "TAG=$(echo ${{ steps.meta.outputs.tags }} | grep -o 'simple-docker:sha-[^,]*')" >> $GITHUB_ENV
       
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -47,18 +32,16 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           load: true
-          tags: ${{ env.DOCKER_METADATA_OUTPUT_TAGS }}
+          tags: ${{ env.TEST_TAG }}
       
       - name: Test
         run: |
-          docker run --rm  ${{ env.DOCKER_METADATA_OUTPUT_TAGS }} /bin/true      
+          docker run --rm ${{ env.TEST_TAG }} /bin/true      
       
       - name: Build and push
-        uses: docker/build-push-action@v6
         if: github.event_name != 'pull_request'
+        uses: docker/build-push-action@v6
         with:
           # platforms: linux/amd64,linux/arm64
           push: true
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME}}/simple-docker:${{ env.TAG }}
-            ${{ env.LATEST_TAG }}
+          tags: ${{ env.LATEST_TAG }}
